fixes layouts z-indexes

--- a/public/css/styles.styl
+++ b/public/css/styles.styl
@@ -96,7 +96,6 @@ $sidePaddingRight       = 30px
 .site-header
 .site-footer
   fixed left right
-  z-index 1
   
 .site-header
   top 0
@@ -139,7 +138,7 @@ $sidePaddingRight       = 30px
 .page-title
   margin-top $siteHeaderHeight
   position relative
-  z-index 0
+  z-index 1
   
 .header-logo
   display block
